# GraphRAG-AI-Agnet

./: .gitignore  README.md  pyproject.toml  update_github.bat
01.docs/01.산출물/100.프로젝트계획/: GraphRAG_AI_Agent_공통프레임워크_WBS.md  GraphRAG_AI_Agent_공통프레임워크_WBS_Gantt.html  GraphRAG_AI_Agent_공통프레임워크_계획산출물_검토및확정.md  GraphRAG_AI_Agent_공통프레임워크_단계별_인력정의서.md  GraphRAG_AI_Agent_공통프레임워크_프로젝트계획서.md
01.docs/01.산출물/200.프로젝트실행/210.아키텍처정의/: GraphRAG_AI_Agent_공통프레임워크_GraphRAG아키텍처정의서.md  GraphRAG_AI_Agent_공통프레임워크_개발표준정의서.md  GraphRAG_AI_Agent_공통프레임워크_데이터저장소아키텍처정의서.md  GraphRAG_AI_Agent_공통프레임워크_시스템아키텍처정의서.md
01.docs/01.산출물/200.프로젝트실행/220.요구정의/: GraphRAG_AI_Agent_공통프레임워크_액터목록_유스케이스목록.md  (+2 more)
01.docs/01.산출물/300.프로젝트종료/: GraphRAG_AI_Agent_공통프레임워크_Lessons_Learned.md  GraphRAG_AI_Agent_공통프레임워크_릴리즈태그_및_버전정리.md  GraphRAG_AI_Agent_공통프레임워크_최종산출물목록.md  GraphRAG_AI_Agent_공통프레임워크_최종종료검토서.md  GraphRAG_AI_Agent_공통프레임워크_프로젝트완료보고서.md
src/common_core/: __init__.py
src/common_core/admin/: __init__.py  routers.py  schemas.py  service.py
src/common_core/agents/: __init__.py  base_state.py  workflow_factory.py
src/common_core/ai_pipeline/: __init__.py
src/common_core/ops/: __init__.py  error_codes.py
src/common_core/pilots/: __init__.py  sol_bat.py  sol_bat_data_indexing.py
tests/: test_admin_mvp.py  test_agent_workflow.py  test_context_assembler.py  test_document_pipeline.py  test_extractors.py  test_graph_store.py  test_graphrag_retrieve_node.py  test_graphrag_schemas.py  test_hybrid_retriever.py  test_sol_bat_pilot.py  test_vectorstores.py
tools/: run_tests.py
(+82 files in other folders)
